syntax = "proto3";

package operate_service;

import "google/protobuf/empty.proto";

option go_package = "github.com/UnicomAI/wanwu/api/proto/operate-service";

service OperateService {
    rpc CreateSystemCustomTab(CreateSystemCustomTabReq) returns (google.protobuf.Empty) {}
    rpc CreateSystemCustomLogin(CreateSystemCustomLoginReq) returns (google.protobuf.Empty) {}
    rpc CreateSystemCustomHome(CreateSystemCustomHomeReq) returns (google.protobuf.Empty) {}
    rpc GetSystemCustom(GetSystemCustomReq) returns (SystemCustom) {}

    rpc AddClientRecord(AddClientRecordReq) returns (google.protobuf.Empty) {}
    // 客户端统计总览
    rpc GetClientOverview(GetClientOverviewReq) returns (ClientOverViewInfo) {}
    // 客户端统计趋势
    rpc GetClientTrend(GetClientTrendReq) returns (ClientTrendInfo) {}
    // 累计客户端统计总览
    rpc GetCumulativeClientOverview(GetCumulativeClientOverviewReq) returns (ClientOverViewInfo) {}
}

message CreateSystemCustomTabReq {
    string orgId = 1; // 租户ID
    string userId = 2; // 用户ID
    string mode = 3; // 模式
    Tab tab = 4; // 标签页信息
}

message CreateSystemCustomLoginReq {
    string orgId = 1; // 租户ID
    string userId = 2; // 用户ID
    string mode = 3;
    Login login = 4; // 登录页
}

message CreateSystemCustomHomeReq {
    string orgId = 1; // 租户ID
    string userId = 2; // 用户ID
    string mode = 3;
    Home home = 4; // 标题
}

message GetSystemCustomReq {
    string mode = 1; // 模式
}

message SystemCustom {
    Login login = 1; // 登录页
    Tab tab = 2; // logo
    Home home = 3; // 标题
}

message Tab {
    string tabLogoPath = 1; // 标签页logo路径
    string tabTitle = 2; // 标签页标题
}

message Login {
    string loginBgPath = 1; // 登录页背景图
    string loginLogo = 2; // 登录页logo路径
    string loginWelcomeText = 3; // 登录页欢迎词
    string loginButtonColor = 4; // 登录按钮颜色
}

message Home {
    string homeLogoPath = 1; // 平台logo路径
    string homeName = 2; // 平台名称
    string homeBgColor = 3; // 平台背景颜色
}

message AddClientRecordReq {
    string clientId =1 ;
}

message GetClientOverviewReq{
    string startDate = 1;
    string endDate = 2;
}

message GetClientTrendReq{
    string startDate = 1;
    string endDate = 2;
}

message GetCumulativeClientOverviewReq{
    string endAt = 1;
}


message ClientOverviewItem {
    float value = 1;
    float periodOverperiod = 2;
}

message ClientOverViewInfo{
    ClientOverviewItem activeClient = 1;
    ClientOverviewItem totalClient = 2;
    ClientOverviewItem additionClient = 3;
}

message ClientTrendInfo{
    StatisticChart client = 1;
    
}

message StatisticChart {
    string tableName = 1;
    repeated StatisticChartLine chartLines = 2;
}

message StatisticChartLine {
    string lineName = 1;
    repeated StatisticChartLineItem items = 2;
}

message StatisticChartLineItem {
    string key = 1;
    float value = 2;
}
